# scholark

./: .clinerules  .env  .env.development  .env.example  .env.local  .env.production  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_REVIEW.md  DB_SCHEMA.md  Dockerfile  README.md  compose.yaml  docker-compose.yml  drizzle.config.ts  justfile  package.json  pnpm-lock.yaml  renovate.json5  schema.sql  setup.sh  tailwind.config.js  tsconfig.backend.json  tsconfig.frontend.json  tsconfig.json  vite.config.ts  wrangler.json  wrangler.jsonc
.github/workflows/: docker-build.yaml  lint-frontend.yaml  lint-python.yaml
.wrangler/deploy/: config.json
.zed/: settings.json
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20250420_103712-7f4e52752aba_create_conference_table.py  20250424_001014-82c075962f45_add_created_at_and_updated_at_columns_.py  20250425_060611-6222a12e4737_add_users.py  20250426_023518-9ebc2f5c619e_add_tags.py  20250426_043432-86f37b2d7da6_initial.py  20250426_090133-5de4313fd490_initial.py  20260412_000000-add_subscriptions_and_slack.py  20260412_215856-f510e294b98a_add_conference_subscriptions_and_slack_.py
backend/scripts/: startup.sh
backend/src/scholark/: __init__.py  main.py  models.py  slack.py
backend/src/scholark/api/: deps.py  main.py
backend/src/scholark/api/routes/: conferences.py  health.py  login.py  tags.py  users.py
backend/src/scholark/auth/: base.py  db_provider.py  ldap_provider.py  oauth.py  router.py
backend/src/scholark/cli/: send_reminders.py
backend/src/scholark/core/: config.py  db.py  security.py
backend/src/scholark/core/auth/: base.py  db_provider.py
backend/tests/: conftest.py  test_config.py  test_main.py  test_slack.py
backend/tests/api/: test_conferences.py  test_login.py  test_tags.py  test_users.py
backend/tests/auth/: test_db_provider.py  test_ldap_provider.py
drizzle/: 0000_warm_fenris.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
frontend/: .dockerignore  .gitignore  Dockerfile  biome.jsonc  openapi-ts.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
frontend/app/: app.css  hey-api.ts  root.tsx  routes.ts  sessions.server.ts
frontend/app/client/: client.gen.ts  index.ts  sdk.gen.ts  types.gen.ts
frontend/app/layouts/: main-frame.tsx  main.tsx
frontend/app/lib/: api.server.ts  auth.server.ts  color.test.ts  color.ts  conference-form.test.ts  conference-form.ts  date.test.ts  date.ts
frontend/app/routes/: conference-subscribe.tsx  conference-tags.tsx  conferences.tsx  create-conference.tsx  create-tag.tsx  delete-conference.tsx  delete-tag.tsx  edit-conference.tsx  edit-tag.tsx  home.tsx  login.tsx  logout.tsx  register.tsx  settings.tsx  timeline.tsx
scripts/: create-dev-user.ts  migrate-data.ts
src/: server.ts
src/api/: auth.ts  conferences.ts  index.ts  research-topics.ts  topic-conferences.ts  topic-notes.ts
src/backend/: server.ts
src/backend/api/: auth.ts  conferences.ts  index.ts  research-topics.ts  topic-conferences.ts  topic-notes.ts
src/backend/db/: index.ts  migrate.ts  schema.ts
src/frontend/: App.tsx  index.html  main.tsx
src/react-app/: App.css  App.tsx  index.css  main.tsx
src/shared/: auth.ts  jwt.ts  schemas.ts
src/worker/: index.ts
(+44 files in other folders)
