[project]
name = "scholark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shunichiro Nomura", email = "nomura@space.t.u-tokyo.ac.jp" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "fastapi[standard]>=0.115.12",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.34.2",
]

[project.scripts]
scholark = "scholark:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
